--- a/completeness.tex
+++ b/completeness.tex
@@ -8,15 +8,18 @@
 
 \subsection{Completeness}
 
-An important aspect of seismic catalogs is their completeness. This characteristic is measured in terms of the start-year of completeness and the completeness magnitude, which are both parameters that are later used in the seismic analysis process. The start-year of completeness is the point in time at which catalog data exhibit a steady rate of event occurrence or record accumulation for a certain magnitude range \myrevision{which in this study we use these values in estimating $a-values$ of smoothed seismic hazard}, and the completeness magnitude ($M_c$) is the magnitude above which the seismic catalog of a region can be considered complete within a certain time period. \myrevision{ We use $M_c$ for each catalog to compute the $b-value$ and $M_{max}$.}
+An important aspect of seismic catalogs is their completeness. This characteristic is measured in terms of the start-year of completeness and the completeness magnitude, which are both parameters that are later used in the seismic analysis process. The start-year of completeness is the point in time at which catalog data exhibit a steady rate of event occurrence or record accumulation for a certain magnitude range, and the completeness magnitude ($M_c$) is the magnitude above which the seismic catalog of a region can be considered complete within a certain time period. \myrevision{In this study, we use the start-year of completeness as a parameter in the estimation of the $a$-values in the smoothed seismic hazard analysis; and we use the completeness magnitude $M_c$ determined for each sub-catalog to compute the $b$-values and $M_{\max}$.}
 
 The start-year of completeness is commonly identified by inspection. A simple approach used by \citet{Frankel1995} and others is to select the year at which a plot of the cumulative number of events with respect to time becomes (or starts to resemble) a straight line. This is done for different magnitude ranges. Following this approach, we determined the year of completeness for magnitude ranges 3--4, 4--5, 5--6 and 6--7. Our choices are illustrated in Fig.~\ref{fig:completeness}, where we show the normalized cumulative number of events with time for each of the seismic zones and magnitude ranges, and indicate our selection of the year of completeness in each case. The values shown in this figure and those corresponding to the uniform model of the entire region of interest are summarized in Table \ref{tab:completeness}. For events $M_w>7$, in which case there are insufficient data to determine a proper threshold, we assumed the catalog to be complete from the earliest time at which there is record of large magnitude earthquakes.
 
-Determining the completeness magnitude $M_c$, on the other hand, is often determined using simple numerical analysis in combination with data inspection. Two common approaches are maximum curvature and the goodness-of-fit test methods. \myrevision{Both methods have been used extensively at previous studies}.The maximum curvature method, or MAXC for simplicity, is widely used because as it has been implemented in the ZMAP software package for seismic hazard analysis developed by \citet{Wiemer2001}. \citet{Zare2014}, for instance, used this software to identify $M_c$ values for the different regions of the Middle East. \myrevision{\citet{Moschetti2015} applied a combination of methods to study the  long-term earthquake rate model for the Central and Eastern United States.} We use the goodness-of-fit test method introduced by \citet{Wiemer2000}, and compute $M_c$ for different catalog-time intervals, namely 1800--1899, 1900--1999, 2000--2015, and for the complete regional catalogs.
+% \myrevision{Both methods have been used extensively in previous studies}.
+% \myrevision{\citet{Moschetti2015} applied a combination of methods to study the long-term earthquake rate model for the Central and Eastern United States.}
 
-We defined these year intervals based on the data magnitude-time distribution (see Fig.~\ref{fig:scatter}) and the idea of distinguishing between historical, early-instrumental, and modern-instrumental catalogs. Having augmented the original catalog with $M>3$ earthquakes beginning in 2000 also influenced our choice of the intervals because at this point the uniformity of the catalog is altered. Last, we also computed $M_c$ values for the complete regional catalogs, but in this case, in order to maintain uniformity throughout time, we only considered $M>4$ events. Fig.~\ref{fig:mc} illustrates the selection of $M_c$ for the case of the main three northern Iran seismic regions, and Table \ref{tab:completeness} presents the final selection of $M_c$ values for these and the other regions, including the uniform northern Iran model for the complete region of interest.
+Determining the completeness magnitude $M_c$, on the other hand, is often done using simple numerical analysis in combination with data inspection. Two common approaches are the maximum curvature method and the goodness-of-fit test method. The maximum curvature method, or MAXC for simplicity, is widely used thanks to the fact that it has been implemented in the ZMAP software package for seismic hazard analysis developed by \citet{Wiemer2001}. \citet{Zare2014}, for instance, used this software to identify $M_c$ values for the different regions of the Middle East. \myrevision{In this study, we use the goodness-of-fit test method introduced by \citet{Wiemer2000} to compute $M_c$. We choose this method over the MAXC method because of ease of implementation and to have first-hand control over the final selection of $M_c$, rather than relying on the inner details of the ZMAP software. We compute} $M_c$ for different catalog-time intervals, namely 1800--1899, 1900--1999, 2000--2015, and for the complete regional catalogs.
 
-The values of $M_c$ for different time intervals and seismic regions are used to determine the seismicity Gutenberg-Richter parameters $b$ and $M_{\max}$ (see Section \ref{sec:params}), \myrevision{and} the start-years of completeness are used later for computing the hazard. Admittedly, the choice of the start-years is highly subjective. We should note then, that in the process of choosing the points indicated in the plots shown in Fig.~\ref{fig:completeness}, we considered additional contributing information such as the history of instrumentation. It is well known that the number of recorded earthquakes increased considerably after the first deployment of seismic instruments in the early 1900s, and later with the establishment of the Worldwide Standardized Seismograph Network in 1961. We compared our choices with the year thresholds reported by \citet{Zare2014}, which we found to be consistently earlier than our preferred years of completeness. In the end, our selection should lead to a slightly more conservative estimations of hazard. For the case of $M_c$, we compared our results with the values reported by \citet{Karimiparidari2013} and \citet{Khodaverdian_2016_BSSA} and found them to be in general good agreement, despite differences in the spatial definition of the seismic zones.
+We defined these year intervals based on the data magnitude-time distribution (see Fig.~\ref{fig:scatter}) and the idea of distinguishing between historical, early-instrumental, and modern-instrumental catalogs. Having augmented the original catalog with $M>3$ earthquakes beginning in 2000 also influenced our choice of the intervals because at this point the uniformity of the catalog is altered. Last, we determined the $M_c$ values for the complete regional catalogs, but in this case, in order to maintain uniformity throughout time, we only considered $M>4$ events. \myrevision{According to \citet{Wiemer2000}, it is recommended to set $M_c$ at the point where the goodness-of-fit reaches 90 percent. However, not all goodness-of-fit plots satisfy this threshold and other considerations must be taken into account.} Fig.~\ref{fig:mc} illustrates the selection of $M_c$ for the case of the main three northern Iran seismic regions, and Table \ref{tab:completeness} presents the final selection of $M_c$ values for these and the other regions, including the uniform northern Iran model for the complete region of interest.
+
+\myrevision{We should note that both the choice of the start-years and that of the $M_c$ values are highly subjective. In the case of the start-years,} when choosing the points indicated in the plots shown in Fig.~\ref{fig:completeness}, we considered additional contributing information such as the history of instrumentation. It is well known that the number of recorded earthquakes increased considerably after the first deployment of seismic instruments in the early 1900s, and later with the establishment of the Worldwide Standardized Seismograph Network in 1961. We compared our choices with the year thresholds reported by \citet{Zare2014}, which we found to be consistently earlier than our preferred years of completeness. In this regard, our selection should lead to a slightly more conservative estimations of hazard. \myrevision{In the case of the $M_c$ values, on the other hand, we also considered the amount of data available above the chosen $M_c$ and the shapes of the cumulative number of events and goodness-of-fit plots. We tried to identify a consistent peak in the goodness-of-fit that coincided with the decay in cumulative number of events, while maintaining a large enough dataset size. For this case, we compared our choice of $M_c$ values with those} reported by \citet{Karimiparidari2013} and \citet{Khodaverdian_2016_BSSA} and found our choices to be in general good agreement, despite differences in the spatial definition of the seismic zones.
 
 \begin{figure*}[t]
     \centering
