up to logic tree

--- a/completeness.tex
+++ b/completeness.tex
@@ -31,6 +31,7 @@ We defined these year intervals based on the data magnitude-time distribution (s
 \begin{table*}%[t]
     \centering
     \caption{Year thresholds and magnitude completeness for the seismic zones within the region of interest in this study. Year of completeness is provided for magnitude ranges between 3 and 7, with $\mathrm{\Delta}M = 1$. The completeness magnitude is provided for the sub-catalogs for three year intervals.}
+    \myrevision{
     \begin{tabular}{lccccrcccccc}
         \cline{2-12}                                                                                 \\[-1.6ex]
                         & \multicolumn{5}{c}{Year for $M_w$ ranges}
@@ -47,5 +48,6 @@ We defined these year intervals based on the data magnitude-time distribution (s
         Uniform Model   & 2005 & 1961 & 1900 & 1778 &--401  & &     6.1    &     4.9    &     3.9    \\[0.5ex]
         \hline
     \end{tabular}
+    }
     \label{tab:completeness}
 \end{table*}
