--- a/content.tex
+++ b/content.tex
@@ -11,13 +11,10 @@
 
 \input{attenuation}
 
+\input{logictree}
+
 \input{results}
 
-\input{conclusions}    
+\input{conclusions}
 
 \input{acknowledge}
-
-
-
-
-
