--- a/table-pga.tex
+++ b/table-pga.tex
@@ -14,6 +14,7 @@
     Bo15: \citet{Boostan2015}.
     Kh16: \citet{Khodaverdian_2016_BSSA}
     }
+\myrevision{
 \begin{tabular}{lccccccccc}
     \hline                                                                                                              \\[-1.6ex]
     \multicolumn{2}{l}{This study}
@@ -52,5 +53,6 @@
     \multicolumn{10}{l}{\small{${}^{*}$ Used surface-wave magnitude $M_s$ 4.0 as magnitude threshold}}                  \\
     \multicolumn{10}{l}{\small{${}^{\dagger}$ Used $M_s$ 5.5 and 6.0 for Central-East and Alborz-Azerbaijan as magnitude threshold}}
 \end{tabular}
+}
 \label{tab:pga}
 \end{table*}
