--- a/attenuation.tex
+++ b/attenuation.tex
@@ -1,28 +1,20 @@
+
 \begin{figure*}[t]
     \centering
-    \includegraphics[width=\textwidth]{figures/pdf/figure-08} 
+    \includegraphics[width=\textwidth]{figures/pdf/figure-08}
     \caption{Variation of horizontal peak ground acceleration (PGA) with distance. KG2004: \citet{Kalkan2004}, BA2008: \citet{Boore2008}, AB2010: \citet{Akkar2010}, SO2012: \citet{Soghrat2012}. The dashed line are $\pm$uncertainty of KG2004.}
     \label{fig:att}
 \end{figure*}
 
-\begin{figure*}[t]
-    \centering
-    \includegraphics[width=\textwidth]{figures/pdf/figure-09}
-    \caption{Logic tree for seismic hazard component in the North Iran.}
-    \label{fig:logic}
-\end{figure*}
-
-
-
 \section{Attenuation Relationship}
 
-The last piece in our hazard analysis process is the choice of an adequate attenuation relationship, or ground motion prediction equation (GMPE). This is a highly influential factor because it controls \myrevision{the intensity level at a particular site given earthquake locations and magnitude from the source model.}
+The last piece in our hazard analysis process is the choice of an adequate attenuation relationship, or ground motion prediction equation (GMPE). This is a highly influential factor because it controls \myrevision{the intensity level at a particular site given an earthquake of a certain magnitude and source characteristics and at a particular distance from the location of interest.}
 
-Recently, \citet{Zafarani2014} investigated the predictive capabilities of a set of nine local, regional, and next generation attenuation (NGA) GMPEs to determine their applicability for northern Iran. They evaluated GMPE predictions against data from 32 earthquakes of magnitudes $M_w$ ranging between 4.7 and 7.4. This included comparisons of PGA and response spectral accelerations (SA) computed from time-series recorded on 163 stations located at epicentral distances of up to 200 km. The evaluation was done using the likelihood (LH) and log-likelihood (LLH) methods of \citet{Scherbaum_2004_BSSA, Scherbaum_2009_BSSA}. The combined evaluation for PGA, and SA for seven periods (T) between 0.1 and 2.0 s, yielded that the best overall predictions were those of the GMPEs introduced by \citet{Ghasemi_2009_JS}, \citet{Abrahamson_2008_ES}, and \citet{Chiou2008}. For the specific case of PGA ($T=0$ s), however, the best results were those obtained with the GMPEs introduced by \citet{Kalkan2004}, \citet{Chiou2008}, and \citet{Boore2008}. \myrevision{\citet{Soghrat2012} and \citet{Akkar2010} are other attenuation relationships which provide higher scores.}
+Recently, \citet{Zafarani2014} investigated the predictive capabilities of a set of nine local, regional, and next generation attenuation (NGA) GMPEs to determine their applicability for northern Iran. They evaluated GMPE predictions against data from 32 earthquakes of magnitudes $M_w$ ranging between 4.7 and 7.4. This included comparisons of PGA and response spectral accelerations (SA) computed from time-series recorded on 163 stations located at epicentral distances of up to 200 km. The evaluation was done using the likelihood (LH) and log-likelihood (LLH) methods of \citet{Scherbaum_2004_BSSA, Scherbaum_2009_BSSA}. The combined evaluation for PGA, and SA for seven periods (T) between 0.1 and 2.0 s, yielded that the best overall predictions were those of the GMPEs introduced by \citet{Ghasemi_2009_JS}, \citet{Abrahamson_2008_ES}, and \citet{Chiou2008}. For the specific case of PGA ($T = 0$ s), however, the best results were those obtained with the GMPEs introduced by \citet{Kalkan2004}, \citet{Chiou2008}, and \citet{Boore2008}. \myrevision{Other GMPEs with good prediction results for the region were those of \citet{Soghrat2012} and \citet{Akkar2010}}.
 
-Since our hazard analysis here focuses on PGA values only, we concentrated our attention in the last set of GMPEs. In comparisons not shown here for brevity, we found that these GMPEs yielded mean predictions that were very close to each other.\myrevision{ Fig.~\ref{fig:att} illustrates the variation of horizontal components pga (in g) with distance for four different magnitude. In practice, epistemic uncertainty is being considered by using different GMPEs through logic tree approach. As \citet{Atkinson2014} suggested, in most cases multiple-GMPEs approach is not necessarily acknowledge the epistemic uncertainty. This fact is also obvious from the Fig.~\ref{fig:att} where the alternative approach which is using \citet{Kalkan2004} as a backbone GMPE as well as uncertainties covers a broader range in compare with using the combination of GMPEs.} Furthermore, based on the LLH coefficients reported by \citet{Zafarani2014}, and using the \myrevision{approach} of \citet{Scherbaum_2009_BSSA}, we found that a logic-tree analysis \myrevision{leads} to weights of 0.3376, 0.3354, and 0.3270 for \citet{Kalkan2004}, \citet{Chiou2008}, and \citet{Boore2008}, respectively. These results meant that neither of them had a substantial advantage over the others. \myrevision{Fig.~\ref{fig:logic} represents the total logic tree approach in order to consider the uncertainty in tectonic seismic region, $M_{max}$, $b-value$, and estimated PGA. The weights are chosen based on previous studies \citep[e.g.,][]{Petersen2015}. We considered the uncertainty in tectonic seismic region through adding the uniform model with lower weight than the most recent accepted classification.}
+\myrevision{A common approach used in seismic hazard analysis given the availability of multiple GMPEs is to address the associated epistemic uncertainty through a combination of the various GMPEs. However, in comparisons not shown here for brevity, we found that some of these GMPEs yielded mean predictions that were very close to each other. In an analysis based on the LLH coefficients reported by \citet{Zafarani2014}, and using the approach of \citet{Scherbaum_2009_BSSA} we found, for instance, that a logic-tree partition for the GMPEs proposed by \citet{Kalkan2004}, \citet{Chiou2008}, and \citet{Boore2008}, leads to weights of 0.3376, 0.3354, and 0.3270, respectively. These results meant that neither of these GMPEs had a substantial advantage over the others. This, however, would go against the desired to account for the associated uncertainty. Recently, \citet{Atkinson2014} argued that in such cases where multiple GMPEs do not offer sufficient variability, their combination does not necessarily and properly address uncertainty and suggests that, instead, one can better consider a high and low alternative based on a central backbone model. Fig.~\ref{fig:att} illustrates the variation of horizontal PGA components (in g) with distance obtained using four of the GMPEs mentioned before for two different earthquake magnitudes. In these and other similar comparisons we noticed that the GMPE proposed by \citet{Kalkan2004} led to centered prediction and we chose this particular GMPE as our central backbone and define an upper and lower bound as the two alternative GMPEs in our logic tree analysis, such that---for the most part---the amplitudes predicted by the mean values of other GMPEs fell within the range of defined by these bounds.}
 
-Based on this, we selected the GMPE proposed by \citet{Kalkan2004} for our analysis. This equation is of the form
+The selected the GMPE proposed by \citet{Kalkan2004} for our analysis is of the form
 %
 \begin{align}
 	\ln \left( Y \right) =
@@ -62,4 +54,12 @@ and $V_A$, $V_S$ and $h$ are
 %
 respectively. The standard deviation of the residuals $(\sigma_{\ln y})$ expressing the random variability of the ground motions is 0.612. The value of $V_S$ is assumed to represent average surface rock sites.
 
-We should note here that even though \citet{Kalkan2004} derived the above attenuation relationship for distances $r$ up to 250 km, \citet{Zafarani2014} only used data up to 200 km in their evaluation of the various GMPEs available. Therefore, to be consistent with the latter, we set the models in the hazard analysis to compute ground motions (i.e., PGAs) at distances no greater than 200 km.
+We should note here that even though \citet{Kalkan2004} derived the above attenuation relationship for distances $r$ up to 250 km, \citet{Zafarani2014} only used data up to 200 km in their evaluation of the various GMPEs available. Therefore, to be consistent with the latter, we set the models in the hazard analysis to compute ground motion intensities (i.e., PGAs) at distances no greater than 200 km.
+
+% STUFF...
+
+% \myrevision{While other GMPEs were included in the analysis by \citet{Zafarani2014} which also proved to be adequate for the region for other intensity parameters, given our focus on PGA, we concentrated our attention in the above mentioned equations, with particular attention to \citet{Kalkan2004}, \citet{Boore2008}, \citet{Soghrat2012} and \citet{Akkar2010}.}
+
+% In practice, epistemic uncertainty is considered by using different GMPEs through logic tree approach. As \citet{Atkinson2014} suggested, in most cases multiple-GMPEs approach is not necessarily acknowledge the epistemic uncertainty. This fact is also obvious from the Fig.~\ref{fig:att} where the alternative approach which is using \citet{Kalkan2004} as a backbone GMPE as well as uncertainties covers a broader range in compare with using the combination of GMPEs.} Furthermore, based on the LLH coefficients reported by \citet{Zafarani2014}, and using the \myrevision{approach} of \citet{Scherbaum_2009_BSSA}, we found that a logic-tree analysis \myrevision{leads} to weights of 0.3376, 0.3354, and 0.3270 for \citet{Kalkan2004}, \citet{Chiou2008}, and \citet{Boore2008}, respectively.
+
+% \myrevision{Fig.~\ref{fig:logic} represents the total logic tree approach in order to consider the uncertainty in tectonic seismic region, $M_{max}$, $b-value$, and estimated PGA. The weights are chosen based on previous studies \citep[e.g.,][]{Petersen2015}. We considered the uncertainty in tectonic seismic region through adding the uniform model with lower weight than the most recent accepted classification.}
